script.js created.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Form</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
 <div class="container">
@@ -48,4 +48,5 @@
     </table>
 </div>
 </body>
+<script src="./js/script.js"></script>
 </html>
