Blog get-all function successful implement using ajax.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Form</title>
+    <title>Blogs Manage Form</title>
     <link rel="stylesheet" href="./style/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="container">
-    <h1>Blog Form</h1>
+    <h1>Blogs Manage Form</h1>
 
     <form class="blog-form">
         <div class="form-group">
@@ -43,7 +43,7 @@
             <th>Content</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody id="tbl-blogs">
         </tbody>
     </table>
 </div>
