Blog id modified & bugs fixed.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,7 +14,9 @@
     <form class="blog-form">
         <div class="form-group">
             <label for="blogId">Blog Id</label>
-            <input type="text" id="blogId" placeholder="Enter blog Id">
+            <select id="blogId">
+                <option value="">Select the Blog Id Before Update, Get, Delete</option>
+            </select>
         </div>
 
         <div class="form-group">
